fix(microbot): use concrete collector