@@ -2,6 +2,7 @@ package net.runelite.client;
 
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 import net.runelite.client.plugins.microbot.pestcontrol.PestControlPlugin;
 
 public class Microbot
@@ -13,7 +14,7 @@ public class Microbot
 
     public static void main(String[] args) throws Exception
     {
-		List<Class<?>> _debugPlugins = Arrays.stream(debugPlugins).toList();
+		List<Class<?>> _debugPlugins = Arrays.stream(debugPlugins).collect(Collectors.toList());
         RuneLiteDebug.pluginsToDebug.addAll(_debugPlugins);
         RuneLiteDebug.main(args);
     }
